--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,5 +32,9 @@ jobs:
       - run: mix deps.get --only test
       - run: mix test
       - run: mix credo
-      - run: MIX_ENV=docs mix deps.get
-      - run: MIX_ENV=docs mix inch.report
+      - run: mix deps.get
+        env:
+          MIX_ENV: docs
+      - run: mix inch.report
+        env:
+          MIX_ENV: docs
