--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,9 +32,7 @@ jobs:
       - run: mix deps.get --only test
       - run: mix test
       - run: mix credo
-      - run: mix deps.get
-        env:
-          MIX_ENV: docs
+      - run: mix deps.get --only docs
       - run: mix inch.report
         env:
           MIX_ENV: docs
