--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,8 +31,6 @@ jobs:
       - run: mix local.hex --force
       - run: mix deps.get --only test
       - run: mix test
+      - run: mix deps.get --only dev
       - run: mix credo
-      - run: mix deps.get --only docs
       - run: mix inch.report
-        env:
-          MIX_ENV: docs
